--- a/mysql-client/Dockerfile
+++ b/mysql-client/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine:latest
-LABEL maintainer "khoa.tan.nguyen.96@gmail.com"
+
+LABEL description="mysql-client" \
+      maintainer="Khoa Nguyen <khoa.tan.nguyen.96@gmail.com>"
 
 RUN apk add --no-cache mysql-client
 ENTRYPOINT ["mysql"]
