--- a/percona-xtrabackup/Dockerfile
+++ b/percona-xtrabackup/Dockerfile
@@ -38,12 +38,43 @@ RUN NB_CORES=${BUILD_CORES-`getconf _NPROCESSORS_CONF`} \
     curl \
     libaio \
     libressl \
-    zlib \
-    ncurses
+    ncurses \
+    openssl \
+    zlib
 
+# Compile and Install Percona XtraBackup
 RUN cd /tmp && mkdir xtrabackup \
     && wget -qO- https://github.com/khoanguyen96/percona-xtrabackup/archive/hotfix.tar.gz | tar zxv --strip 1 \
     && cmake -DBUILD_CONFIG=xtrabackup_release -DWITH_MAN_PAGES=off && make -j ${NB_CORES} && make install \
     && chmod -R +x /usr/local/xtrabackup/bin && ln -s /usr/local/xtrabackup/bin/* /usr/bin \
     && apk del ${BUILD_DEPS} \
     && rm -rf /var/cache/apk/* /tmp/*
+
+# Copy Backup Scripts
+COPY scripts/* /usr/local/bin/
+RUN chmod +x -R /usr/local/bin
+ENV PATH /usr/local/bin:$PATH
+
+# Add User
+RUN addgroup -S backup \
+    && addgroup -S mysql \
+    && adduser -S backup \
+    && addgroup backup backup \
+    && addgroup backup mysql
+
+# Set Up Volumes
+RUN mkdir -p /backups/mysql \
+    && mkdir -p /etc/mysql \
+    && chown -R backup:backup /backups/mysql \
+    && chown -R backup:mysql /etc/mysql
+VOLUME /backups/mysql /etc/mysql
+
+# Run Script
+COPY run.sh /run.sh
+RUN chmod +x /run.sh
+
+USER backup
+ENV USER backup
+WORKDIR /backups/mysql
+
+CMD ["bash", "-c", "/run.sh", ";", "bash"]
