--- a/mysql-client/Dockerfile
+++ b/mysql-client/Dockerfile
@@ -3,5 +3,11 @@ FROM alpine:latest
 LABEL description="mysql-client" \
       maintainer="Khoa Nguyen <khoa.tan.nguyen.96@gmail.com>"
 
-RUN apk add --no-cache mysql-client
+RUN apk add --no-cache mysql-client curl
+
+# Install wait-for-it
+RUN curl --slient --show-error --location --output /usr/local/bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
+  && ln -s usr/local/bin/wait-for-it.sh \
+  && chmod +x /usr/local/bin/wait-for-it.sh
+
 ENTRYPOINT ["mysql"]
