--- a/mysql-client/Dockerfile
+++ b/mysql-client/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:latest
 LABEL description="mysql-client" \
       maintainer="Khoa Nguyen <khoa.tan.nguyen.96@gmail.com>"
 
-RUN apk add --no-cache mysql-client curl
+RUN apk add --no-cache bash curl mysql-client
 
 # Install wait-for-it
 RUN curl --slient --show-error --location --output /usr/local/bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
