--- a/mysql-client/Dockerfile
+++ b/mysql-client/Dockerfile
@@ -6,7 +6,7 @@ LABEL description="mysql-client" \
 RUN apk add --no-cache bash curl mysql-client
 
 # Install wait-for-it
-RUN curl --slient --show-error --location --output /usr/local/bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
+RUN curl --location --output /usr/local/bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
   && ln -s usr/local/bin/wait-for-it.sh \
   && chmod +x /usr/local/bin/wait-for-it.sh
 
