--- a/mysqldump-secure/Dockerfile
+++ b/mysqldump-secure/Dockerfile
@@ -5,6 +5,8 @@ ARG MYSQLDUMP_SECURE_VER=0.16.3
 LABEL description="mysqldump-secure" \
       maintainer="Khoa Nguyen <khoa.tan.nguyen.96@gmail.com>"
 
+ENV MYSQL_CNF_FILE=/etc/mysqldump-secure.cnf
+
 # Build Dependencies
 # Install mysqldump-secure
 RUN apk add --no-cache build-base ca-certificates coreutils \
