--- a/terraria-server/Dockerfile
+++ b/terraria-server/Dockerfile
@@ -12,6 +12,7 @@ ENV LOG_ROOT=/var/log/terraria
 RUN apk add --no-cache \
   wget \
   zip \
+  && mkdir -p ${SERVER_ROOT} \
   && wget -q http://terraria.org/system/dedicated_servers/archives/000/000/032/original/terraria-server-1353.zip -O /tmp/terraria.zip \
   && unzip /tmp/terraria.zip ${TERRARIA_VERSION}/Linux/* -d ${SERVER_ROOT} \
   && rm -rf /tmp/* \
