alpine-node-git: add build deps for node-gyp

--- a/alpine-node-git/Dockerfile
+++ b/alpine-node-git/Dockerfile
@@ -1,4 +1,8 @@
 FROM mhart/alpine-node:latest
 
-RUN apk -U --no-cache update && apk -U --no-cache add \
-  git
+RUN apk --no-cache add \
+  git \
+  gcc \
+  g++ \
+  python
+
