Remove alpine-node-chromium, add chromium to alpine-node-git

--- a/alpine-node-git/Dockerfile
+++ b/alpine-node-git/Dockerfile
@@ -1,8 +1,11 @@
 FROM mhart/alpine-node:latest
 
 RUN apk --no-cache add \
+  chromium \
   git \
   gcc \
   g++ \
-  python
+  python \
+  ttf-freefont \
+  udev \
 
